--- a/index.html
+++ b/index.html
@@ -1292,7 +1292,7 @@ the data exposed, is to autogenerate a new email address for each context.
 
 ### Ancillary uses
 
-[=Sites=] sometimes use data in ways that aren't needed for the user's immediate
+[=Sites=] sometimes use data in ways that aren't needed for the user's primary
 goals. For example, they might bill advertisers, measure site performance, or
 tell developers about bugs.
 These are examples of [=ancillary use=] of [=data=].
