--- a/index.html
+++ b/index.html
@@ -1304,10 +1304,19 @@ the data exposed, is to autogenerate a new email address for each context.
 
 ### Ancillary uses
 
-[=Sites=] sometimes use data in ways that aren't needed for the user's immediate
+[=Sites=] sometimes use data in ways that aren't needed for the user's primary
 goals. For example, they might bill advertisers, measure site performance, or
-tell developers about bugs. These uses are known as <dfn data-lt="ancillary
-use">ancillary uses</dfn>.
+tell developers about bugs.
+These are examples of [=ancillary use=] of [=data=].
+
+An <dfn>ancillary use</dfn> is any case where [=data processing=]
+provides direct benefit primarily to [=actors=]
+other than the [=person=] who is the subject of that [=data=].
+Ancillary uses of [=personal data=] might provide benefit to that [=person=],
+but any benefit is indirect.
+For example, being able to charge advertisers provides benefit in that
+the site can sustain its business and remain available for future interactions,
+but this benefit is primarily realized by the site's owners.
 
 [=Sites=] can get the data they want for [=ancillary uses=] from a variety of places:
 
